# GridDataHub

./: .gitignore  README.md  api_server.py  dockerfile  main.py  pyproject.toml  render.yaml  requirements.txt
notebooks/: API_and_Scraping.ipynb  Data_Workflow_and_GSheet.ipynb
