[project]
name = "griddatahub"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.11",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "urllib3>=2.3.0",
    "uvicorn>=0.34.0",
]
